--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,12 @@ environment:
 
 dependencies:
   cupertino_icons: ^1.0.2
-  get: 4.6.6
+  dio: ^5.3.4
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
+  get: 4.6.6
+  pretty_dio_logger: ^1.3.1
 
 dev_dependencies:
   flutter_lints: ^2.0.0
