--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,10 @@ dependencies:
   dio: ^5.3.4
   flutter:
     sdk: flutter
+  flutter_easyloading: ^3.0.5
   flutter_svg: ^2.0.9
   get: 4.6.6
+  infinite_scroll_pagination: ^4.0.0
   pretty_dio_logger: ^1.3.1
 
 dev_dependencies:
